# slopbox

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  clusters.yaml  ilm_review.py  pyproject.toml  requirements.txt
docs/: dangling-index-scanner.md  ilm-review.md  k8s-inventory.md  kibana-log-export.md  maintenance-node-drain-reboot.md  repo-standards-audit.md
domain/es/: models.py  types.py
domain/k8s/: models.py
slopbox/: formatting.py
tests/: test_client.py  test_domain_es.py  test_formatting.py  test_ilm_review.py
