[project]
name = "slopbox"
version = "0.1.0"
description = "Collection of Elasticsearch and ops tooling"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
